--- a/index.html
+++ b/index.html
@@ -2,89 +2,87 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plan n Go : Explore Maharastra with us</title>
-  <link rel="stylesheet" href="./pages/nav-foot.css">
-  <link rel="stylesheet" href="./pages/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhartiya Virasat-The indian heritage</title>
+    <link rel="stylesheet" href="./pages/nav-foot.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
 
-  <!-- Navigation Bar starts-->
-  <div class="navbar">
+    <!-- Navigation Bar starts-->
+    <div class="navbar">
+        <div>
+            <img src="./images/logo-1-nobg.png" alt="Bhartiya Virasat" class="logo" width="80%" height="50%">
+        </div>
+
+        <div class="nav-links">
+            <a href="index.html" class="page"> Mythology </a>
+            <a href="./pages/ticketbooking.html" class="page"> History </a>
+            <a href="" class="page"> The Fighters </a>
+            <a href="" class="page"> Inspiring Indians </a>
+        </div>
+
+        <div class="navbar-content">
+            <input list="explore-maharashtra" id="search-bar" placeholder="🔍">
+            <form>
+                <select id="selectLanguage">
+                    <option id="lang"> English</option>
+                    <option id="lang"> हिन्दी </option>
+                </select>
+            </form>
+        </div>
+
+    </div> <!-- Navigation Bar ends-->
+
+    <!--main body-->
     <div>
-      <img src="./images/logo-1.png" alt="Bhartiya Virasat" class="logo" width="80%" height="50%">
-    </div>
+        <img src="./images/background-image.png" alt="Bhartiya Virasat" class="background-image" height="600px">
+        <h1 class="text-overlay">
+            Explore India's Living Heritage
+        </h1>
+        <p class="p">India's living heritage includes the timeless legends of great saints, sages, warriors, philosophers, and
+            spiritual icons whose teachings and stories continue to inspire generations. These legends-like Swami
+            Vivekananda, Chanakya, Adi Shankaracharya, Maharana Pratap, Rani Lakshmibai, and many others-are not just
+            historical figures but symbols of values such as courage, wisdom, devotion, and selflessness.
 
-    <div class="nav-links">
-      <a href="index.html" class="page"> Things to do </a>
-      <a href="./pages/ticketbooking.html" class="page"> What to see </a>
-      <a href="" class="page"> where to go </a>
-      <a href="" class="page"> Plan your trip </a>
-    </div>
+            Their lives are celebrated through oral storytelling, traditional art forms, festivals, and temple rituals,
+            keeping their spirit alive in the hearts of people. From epics like the Ramayana and Mahabharata to the
+            teachings of Buddha and the Bhakti saints, India's legends form a living bridge between its glorious past
+            and present cultural identity.
 
-    <div class="navbar-content">
-      <input list="explore-maharashtra" id="search-bar" placeholder="🔍">
-      <form>
-        <select id="selectLanguage">
-          <option id="lang"> English</option>
-          <option id="lang"> हिन्दी </option>
-        </select>
-      </form>
-    </div>
+            This ongoing remembrance and reverence form the core of India's living heritage, reminding us of who we are
+            and where we come from.
+        </p>
 
-  </div> <!-- Navigation Bar ends-->
-
-  <!--main body-->
-  <div>
-
-    <div class="video-container">
-
-      <div class="video">
-        <video autoplay muted loop>
-          <source src="./video/bg-video-1.mp4" type="video/mp4">
-          Your browser does not support HTML5 video.
-        </video>
-      <div class="text-overlay">
-        <h1>Welcome to Maharashtra</h1>
-        <p id="p">Explore the land of vibrant culture, stunning beaches, and ancient caves </p>
-      </div>
-      </div>
-      <p id="main-data"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Monsoon is a magical time to travel in Maharashtra, from
-        June to September. The rains turn the hills green and fill the rivers and waterfalls, making places like
-        Lonavala, Mahabaleshwar, Malshej Ghat, and Bhandardara perfect for nature trips. It's a great season for
-        trekking, road trips, and enjoying misty weather. While travel can be affected by heavy rain, the scenic beauty
-        and refreshing climate make monsoon a favorite time for travelers in Maharashtra.
-      </p>
-
-      <h1 id="main-head">
-        Experience your Mansoon in Maharastra
-      </h1>
-      <div id="card">
-        <div class="card">
-          <div>
-            must try adventerous thrills
-          </div>
-          <div>
-            Architectural Wonders
-          </div>
-          <div>
-            coolest attractions
-          </div>
+        <div id="card">
+            <div>
+                <h1> Inspire Your Thoughts with Indian Legends </h1>
+            </div>
+            <div class="card">
+                <div class="divine">
+                    Divine Tales
+                </div>
+                <div class="History">
+                    Legends of the Land
+                </div>
+                <div class="Philosophy">
+                    Ancient Minds
+                </div>
+            </div>
+            <div class="card">
+                <div class="spirit">
+                    Spiritual Souls
+                </div>
+                <div class="Warrior">
+                    Unsung Freedom Fignters
+                </div>
+                <div class="new">
+                    New Legacy
+                </div>
+            </div>
         </div>
-        <div class="card">
-          <div>
-            Spiritual havens
-          </div>
-          <div>
-            Futuristic experiences
-          </div>
-          <div>
-            Healing space for the soul
-          </div>
-        </div>
-      </div>
     </div>
 
 
@@ -92,76 +90,79 @@
     <!-- Footer starts -->
     <footer class="footer">
 
-      <div class="footer-container">
-        <div class="footer-container-1">
-          Quick Links
-          <table border="0" class="table">
-            <tr>
-              <td> Things to do </td>
-              <td> What to do </td>
-              <td> Where to go </td>
-            </tr>
-            <tr>
-              <td> Plan your trip </td>
-              <td> About us </td>
-              <td> Contact us </td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="footer-container-2">
-          News & Updates
-          <p id="news"> sign up for more exciting events/news in Maharashtra.
-            learn more about our culture and get great deals on your next trip.
-          </p>
-          <form>
-            <button type="submit" class="subscribe-button"> Subscribe Now </button>
-          </form>
-        </div>
-
-        <div class="footer-container-3">
-          Follow Us
-          <div class="social-icons">
-            <a href="https://www.facebook.com/"> <img src="./images/facebook.png" alt="Facebook" class="social-icon">
-            </a>
-            <a href="https://www.instagram.com/"> <img src="./images/instagram.png" alt="Instagram" class="social-icon">
-            </a>
-            <a href="https://www.twitter.com/"> <img src="./images/twitter.png" alt="Twitter" class="social-icon"> </a>
-            <a href="https://www.youtube.com/"> <img src="./images/youtube.png" alt="YouTube" class="social-icon"> </a>
-          </div>
-        </div>
-      </div>
-
-      <br>
-      <hr>
-
-      <div class="footer-content">
-        <div>
-          <img src="./image/logo-1.png" alt="Plan N GO Logo" class="logo-1" width="45%" height=auto>
-        </div>
-
-        <div class="footer-content-main">
-          <div class="footer-content-1">
-            <div class="foot-content">
-              <a href="./pdf/Terms-conditions.pdf" target="_blank" id="text"> Terms and conditions </a>
+        <div class="footer-container">
+            <div class="footer-container-1">
+                Quick Links
+                <table border="0" class="table">
+                    <tr>
+                        <td> Divine Tales </td>
+                        <td> Legends of the Land </td>
+                        <td> Ancient Minds </td>
+                    </tr>
+                    <tr>
+                        <td> Spiritual Souls </td>
+                        <td> Unsung Freedom Fignters </td>
+                        <td> New Legacy </td>
+                    </tr>
+                </table>
             </div>
 
-            <div class="foot-content">
-              <a href="./pdf/PLAN_n_GO_Privacy_Policy.pdf" target="_blank" id="text"> Privacy Policy </a>
+            <div class="footer-container-2">
+                News & Updates
+                <p id="news"> Get updates on the latest posts and more from History Rise straight to your inbox.
+                </p>
+                <form>
+                    <button type="submit" class="subscribe-button"> Subscribe Now </button>
+                </form>
             </div>
 
-            <div class="foot-content">
-              <a href="./pages/Contact.html" target="_blank" id="text"> Contact us </a>
+            <div class="footer-container-3">
+                Follow Us
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/"> <img src="./images/facebook.png" alt="Facebook"
+                            class="social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/"> <img src="./images/instagram.png" alt="Instagram"
+                            class="social-icon">
+                    </a>
+                    <a href="https://www.twitter.com/"> <img src="./images/twitter.png" alt="Twitter"
+                            class="social-icon"> </a>
+                    <a href="https://www.youtube.com/"> <img src="./images/youtube.png" alt="YouTube"
+                            class="social-icon"> </a>
+                </div>
             </div>
-          </div>
-
-          <div class="last-footer">
-            © 2025 Plan n GO. All rights reserved.
-          </div>
-
         </div>
 
-      </div>
+        <br>
+        <hr>
+
+        <div class="footer-content">
+            <div>
+                <img src="./images/logo-1-nobg.png" alt="Bhartiya Virasat logo" class="logo" width="80%" height="80%">
+            </div>
+
+            <div class="footer-content-main">
+                <div class="footer-content-1">
+                    <div class="foot-content">
+                        <a href="./pdf/Terms-conditions.pdf" target="_blank" id="text"> Terms and conditions </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pdf/PLAN_n_GO_Privacy_Policy.pdf" target="_blank" id="text"> Privacy Policy </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pages/Contact.html" target="_blank" id="text"> Contact us </a>
+                    </div>
+                </div>
+
+                <div class="last-footer">
+                    © 2025 Bhartiya Virasat. All rights reserved.
+                </div>
+
+            </div>
+
+        </div>
     </footer>
     <!-- Footer ends -->
 
