updates in homepage

--- a/index.html
+++ b/index.html
@@ -61,25 +61,31 @@
                 <h1> Inspire Your Thoughts with Indian Legends </h1>
             </div>
             <div class="card">
-                <div class="divine">
-                    Divine Tales
+                <div>
+                    <img src="./images/gods.png" alt="mythical god" class="card-0" height="230px" width="300px">
+                    <h2> Divine Tales </h2>
                 </div>
-                <div class="History">
-                    Legends of the Land
+                <div>
+                    <img src="./images/historical-leaders.png" alt="historical leaders" class="card-0" height="230px" width="320px">
+                    <h2> Legends of the Land </h2>
                 </div>
-                <div class="Philosophy">
-                    Ancient Minds
+                <div>
+                    <img src="./images/anciend-minds.png" alt="ancient minds" class="card-0" height="230px" width="300px">
+                    <h2> Ancient Minds </h2>
                 </div>
             </div>
             <div class="card">
-                <div class="spirit">
-                    Spiritual Souls
+                <div>
+                    <img src="./images/spiritual-souls.png" alt="spiritual souls" class="card-0" height="230px" width="300px">
+                    <h2> Spiritual Souls </h2>
                 </div>
-                <div class="Warrior">
-                    Unsung Freedom Fignters
+                <div>
+                    <img src="./images/freedom-fighters.png" alt="freedom fighters" class="card-0" height="230px" width="350px">
+                    <h2> Unsung Freedom Fignters </h2>
                 </div>
-                <div class="new">
-                    New Legacy
+                <div>
+                    <img src="./images/new-legacy.png" alt="new legacy" class="card-0" height="230px" width="280px">
+                    <h2> New Legacy </h2>
                 </div>
             </div>
         </div>
