terms and conditions and privacy policy added

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
             <div class="footer-content-main">
                 <div class="footer-content-1">
                     <div class="foot-content">
-                        <a href="./pdf/Terms-conditions.pdf" target="_blank" id="text"> Terms and conditions </a>
+                        <a href="./pdf/terms-condition.pdf" target="_blank" id="text"> Terms and conditions </a>
                     </div>
 
                     <div class="foot-content">
-                        <a href="./pdf/PLAN_n_GO_Privacy_Policy.pdf" target="_blank" id="text"> Privacy Policy </a>
+                        <a href="./pdf/privacy-policy.pdf" target="_blank" id="text"> Privacy Policy </a>
                     </div>
 
                     <div class="foot-content">
