--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="nav-links">
-            <a href="index.html" class="page"> Mythology </a>
+            <a href="./pages/methology.html" class="page"> Mythology </a>
             <a href="./pages/ticketbooking.html" class="page"> History </a>
             <a href="" class="page"> The Fighters </a>
             <a href="" class="page"> Inspiring Indians </a>
