--- a/pages/methology.html
+++ b/pages/methology.html
@@ -4,8 +4,163 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>methology page</title>
+     <title>Methology page</title>
+    <link rel="stylesheet" href="./methology.css">
+   
 </head>
 <body>
-    
+    <!-- Navigation Bar starts-->
+    <div class="navbar">
+        <div>
+              <img src="../images/logo-1-nobg.png" alt="Bhartiya Virasat" class="logo" width="30%" height="30%">
+        </div>
+
+        <div class="nav-links">
+            <a href="./pages/methology.html" class="page"> Mythology </a>
+            <a href="./pages/ticketbooking.html" class="page"> History </a>
+            <a href="" class="page"> The Fighters </a>
+            <a href="" class="page"> Inspiring Indians </a>
+        </div>
+
+        <div class="navbar-content">
+            <input list="explore-maharashtra" id="search-bar" placeholder="🔍">
+            <form>
+                <select id="selectLanguage">
+                    <option id="lang"> English</option>
+                    <option id="lang"> हिन्दी </option>
+                </select>
+            </form>
+        </div>
+
+    </div> <!-- Navigation Bar ends-->
+
+
+<!--main body-->
+  <div class="header">
+      <h1>Methology Gods</h1>
+  </div>
+  <div class="container">
+   
+       <div class="image-2">
+       <img src="../images/shiv.jpg">
+       </div>
+       <div class="info-2">
+       <h2>Lord Shiva</h2>
+       <span>Shiva is a major Hindu deity and one of the principal gods in the Trimurti, alongside Brahma and Vishnu. He is known as the destroyer and transformer, but also as a benevolent god, a great ascetic, and the Lord of Dance (Nataraja). Shiva is a complex figure with both fierce and benevolent aspects, embodying contradictions and representing the cycle of creation, preservation, and destruction........<sub><a href="shiv.html" class="read-more">read more</a></sub></span>
+  </div>
+      </div>
+  <div class="container-1">
+  <div class="info-1">
+      <h2>God Ganesha</h2>
+      <span>One day Goddess Parvati was at home on Mt.Kailash preparing for a bath. As she didn’t want to be disturbed, she told Nandi, her husband Shiva’s Bull, to guard the door and let no one pass. Nandi faithfully took his post, intending to carry out Parvati’s wishes. But, when Shiva came home and naturally wanted to come inside, Nandi had to let him pass, being loyal first to Shiva. Parvati was angry at this slight, but even more than this, at the fact that she had no one as loyal to Herself as Nandi was to Shiva. So, taking the turmeric paste (for bathing) from her body and breathing life into it, she created Ganesha, declaring him to be her own loyal son......<sub><a href="./ganesha.html" class="read-more-1">read more</a></sub> </span>
+ </div>
+ <div class="image-1">
+      <img src="../images/gk.webp">
+  </div>
+  </div>
+  <div class="container">
+   
+        <div class="image-2">
+        <img src="../images/krish.jpg">
+        </div>
+  <div class="info-2">
+    <div class="info">
+      <h2>God Krishna</h2>
+      <span>Krishna, the all-attractive-one is arguably the most popular God of the sub-continent! He is Megh-varna, the color-of-clouds; Go-pal, the protector of cows; Murli-manohar, who steals hearts by the melody of his flute; and Madan-Mohan who can mesmerize Cupid himself with His beauty.........<sub><a href="krish.html" class="read-more">read more</a></sub></span>
+   </div>
+    </div>
+  </div>
+  <div class="container-1">
+
+       <div class="info-1">
+      <h2>God Jagnath</h2>
+     <span > The most important of the numerous yearly festivals is the Chariot Festival (Rathayatra), which takes place on the second day of the bright fortnight of Ashadha (June–July). The image is placed in a wagon so heavy that the efforts of hundreds of devotees are required to move it, and it is dragged through deep sand to the country house of the god. The journey takes several days, and thousands of pilgrims participate........<sub><a href="./jaganath.html" class="read-more-1">read more</a></sub> </span>
+       </div>
+ <div class="image-1">
+      <img src="../images/jaganath.jpg">
+ </div>
+</div>
+
+<!-- Footer starts -->
+    <footer class="footer">
+
+        <div class="footer-container">
+            <div class="footer-container-1">
+                Quick Links
+                <table border="0" class="table">
+                    <tr>
+                        <td> Divine Tales </td>
+                        <td> Legends of the Land </td>
+                        <td> Ancient Minds </td>
+                    </tr>
+                    <tr>
+                        <td> Spiritual Souls </td>
+                        <td> Unsung Freedom Fignters </td>
+                        <td> New Legacy </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="footer-container-2">
+                News & Updates
+                <p id="news"> Get updates on the latest posts and more from History Rise straight to your inbox.
+                </p>
+                <form>
+                    <button type="submit" class="subscribe-button"> Subscribe Now </button>
+                </form>
+            </div>
+
+            <div class="footer-container-3">
+                Follow Us
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/"> <img src="../images/facebook.png" alt="Facebook"
+                            class="social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/"> <img src="../images/instagram.png" alt="Instagram"
+                            class="social-icon">
+                    </a>
+                    <a href="https://www.twitter.com/"> <img src="../images/twitter.png" alt="Twitter"
+                            class="social-icon"> </a>
+                    <a href="https://www.youtube.com/"> <img src="../images/youtube.png" alt="YouTube"
+                            class="social-icon"> </a>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <hr>
+
+        <div class="footer-content">
+            <div>
+                <img src="../images/logo-1-nobg.png" alt="Bhartiya Virasat logo" class="logo" width="80%" height="80%">
+            </div>
+
+            <div class="footer-content-main">
+                <div class="footer-content-1">
+                    <div class="foot-content">
+                        <a href="./pdf/Terms-conditions.pdf" target="_blank" id="text"> Terms and conditions </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pdf/PLAN_n_GO_Privacy_Policy.pdf" target="_blank" id="text"> Privacy Policy </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pages/Contact.html" target="_blank" id="text"> Contact us </a>
+                    </div>
+                </div>
+
+                <div class="last-footer">
+                    © 2025 Bhartiya Virasat. All rights reserved.
+                </div>
+
+            </div>
+
+        </div>
+    </footer>
+    <!-- Footer ends -->
+
+
+
 </body>
 </html>
