added design part

--- a/pages/freedom fighers/fighers.html
+++ b/pages/freedom fighers/fighers.html
@@ -8,31 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" >
+    <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner ">
+      <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../freedom fighers/images/banner-1.png" class="d-block banner-1" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Every brick tells history, every hero builds trust!</h5>
+            <h5 class="slogan">Every brick tells history, every hero builds trust!</h5>
             <p></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../freedom fighers/images/Banner-2.jpg" class="d-block w-100 banner-2" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>She rises, the world changes!</h5>
+            <h5 class="slogan">She rises, the world changes!</h5>
             <p></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../freedom fighers/images/banner-3.jpg" class="d-block w-100 p-20 banner-3  banner-1" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>In silence they serve, with courage they roar!</h5>
+            <h5 class="slogan">In silence they serve, with courage they roar!</h5>
             <p></p>
           </div>
         </div>
@@ -45,6 +45,42 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+
+        </div>
+      </div>
+
+      <div class="main-div">
+        <img src="../freedom fighers/images/bhagatsingh.jpeg" alt="bhagat-singh" class="div-img">
+        <div class="info-div">
+          <h3 class="heading-div">Bhangat Singh</h3>
+          <p><span class="blue-color">Bhagat Singh</span> (born September 27/28, 1907, Banga, Lyallpur, western Punjab, India [now Faisalabad, Pakistan]—died March 23, 1931, Lahore [now in Pakistan]) was an Indian freedom fighter who was honored as a hero of the Indian Independence Movement after his execution by British authorities at the age of <span class="blue-color">23</span>. He is also known as Shaheed Bhagat Singh.<br>
+          Born into a Sikh family of independence warriors in Punjab, Bhagat Singh became a renowned Indian revolutionary and a controversial figure who proudly martyred himself for his country. He actively participated in the non-cooperation movement in 1921 and established the <span class="blue-color">“Naujawan Bharat Sabha”</span> to instill patriotism in Punjabi youth.
+          </p>
+          <button class="learn-more-button">learn More</button>
+        </div>
+      </div>
+
+      <div class="main-div">
+        <div class="info-div">
+          <h3 class="heading-div">Subhash Chandra Bose</h3>
+          <p>ubhas Chandra Bose (born January 23, 1897, Cuttack, Orissa [now Odisha], India—died August 18, 1945?, Taihoku City, Formosa [now Taipei, Taiwan]?) was an Indian revolutionary prominent in the Indian Independence Movement against British rule. Popularly known as Netaji, he led an armed force composed of former Indian prisoners of war and volunteers from the Indian expatriate community.<br>One of the famous freedom fighters of India, <b>Subhas Chandra Bose</b>, popularly known as Netaji, was born in Orissa. He joined the Indian National Congress and was a part of the civil disobedience movement. When Gandhiji’s non- violent approach didn’t resonate, he sought help in Germany and  established the Azad Hind Government and INA, He began personal training and supervising all freedom fighters. 
+          </p>
+          <button class="learn-more-button">learn More</button>
+        </div>
+        <img src="../freedom fighers/images/subashchnadrabosh.jpeg" alt="bhagat-singh" class="div-img">
+      </div>
+
+      <div class="main-div">
+        <img src="../freedom fighers/images/bhagatsingh.jpeg" alt="bhagat-singh" class="div-img">
+        <div class="info-div">
+          <h3>Bhangat Singh</h3>
+          <p><span class="blue-color">Bhagat Singh</span> (born September 27/28, 1907, Banga, Lyallpur, western Punjab, India [now Faisalabad, Pakistan]—died March 23, 1931, Lahore [now in Pakistan]) was an Indian freedom fighter who was honored as a hero of the Indian Independence Movement after his execution by British authorities at the age of 23. He is also known as Shaheed Bhagat Singh.<br>
+          Born into a Sikh family of independence warriors in Punjab, Bhagat Singh became a renowned Indian revolutionary and a controversial figure who proudly martyred himself for his country. He actively participated in the non-cooperation movement in 1921 and established the “Naujawan Bharat Sabha” to instill patriotism in Punjabi youth.
+          </p>
+          <button class="learn-more-button">learn More</button>
+        </div>
+      </div>
+      
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
