--- a/pages/krishna.html
+++ b/pages/krishna.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>God krushna</title>
-    <link rel="stylesheet" href="krishna.css">
+    <link rel="stylesheet" href="./krishna.css">
 </head>
 <body>
     <h1>God Krishna</h1>
