--- a/pages/methology.html
+++ b/pages/methology.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>methology page</title>
-     <title>Methology page</title>
     <link rel="stylesheet" href="./methology.css">
    
 </head>
@@ -66,7 +65,7 @@
   <div class="info-2">
     <div class="info">
       <h2>God Krishna</h2>
-      <span>Krishna, the all-attractive-one is arguably the most popular God of the sub-continent! He is Megh-varna, the color-of-clouds; Go-pal, the protector of cows; Murli-manohar, who steals hearts by the melody of his flute; and Madan-Mohan who can mesmerize Cupid himself with His beauty.........<sub><a href="krish.html" class="read-more">read more</a></sub></span>
+      <span>Krishna, the all-attractive-one is arguably the most popular God of the sub-continent! He is Megh-varna, the color-of-clouds; Go-pal, the protector of cows; Murli-manohar, who steals hearts by the melody of his flute; and Madan-Mohan who can mesmerize Cupid himself with His beauty.........<sub><a href="krishna.html" class="read-more">read more</a></sub></span>
    </div>
     </div>
   </div>
@@ -74,7 +73,7 @@
 
        <div class="info-1">
       <h2>God Jagnath</h2>
-     <span > The most important of the numerous yearly festivals is the Chariot Festival (Rathayatra), which takes place on the second day of the bright fortnight of Ashadha (June–July). The image is placed in a wagon so heavy that the efforts of hundreds of devotees are required to move it, and it is dragged through deep sand to the country house of the god. The journey takes several days, and thousands of pilgrims participate........<sub><a href="./jaganath.html" class="read-more-1">read more</a></sub> </span>
+     <span > The most important of the numerous yearly festivals is the Chariot Festival (Rathayatra), which takes place on the second day of the bright fortnight of Ashadha (June–July). The image is placed in a wagon so heavy that the efforts of hundreds of devotees are required to move it, and it is dragged through deep sand to the country house of the god. The journey takes several days, and thousands of pilgrims participate........<sub><a href="./jagnath.html" class="read-more-1">read more</a></sub> </span>
        </div>
  <div class="image-1">
       <img src="../images/jaganath.jpg">
