--- a/pages/methology.html
+++ b/pages/methology.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="nav-links">
-            <a href="./pages/methology.html" class="page"> Mythology </a>
-            <a href="./pages/ticketbooking.html" class="page"> History </a>
-            <a href="" class="page"> The Fighters </a>
-            <a href="" class="page"> Inspiring Indians </a>
+            <a href="../pages/methology.html" class="page"> Mythology </a>
+            <a href="../pages/history.html" class="page"> History </a>
+            <a href="../pages/fighter.html" class="page"> The Fighters </a>
+            <a href="../pages/inspiring" class="page"> Inspiring Indians </a>
         </div>
 
         <div class="navbar-content">
