spiritual page created

--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
             <div class="footer-container-3">
                 Follow Us
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/"> <img src="./images/facebook.png" alt="Facebook"
+                    <a href="https://www.facebook.com/profile.php?id=61578076284703" target="_blank"> <img src="./images/facebook.png" alt="Facebook"
                             class="social-icon">
                     </a>
-                    <a href="https://www.instagram.com/"> <img src="./images/instagram.png" alt="Instagram"
+                    <a href="https://www.instagram.com/prasad_.patil_96k/#" target="_blank"> <img src="./images/instagram.png" alt="Instagram"
                             class="social-icon">
                     </a>
-                    <a href="https://www.twitter.com/"> <img src="./images/twitter.png" alt="Twitter"
+                    <a href="https://x.com/prasad_shirfule/" target="_blank"> <img src="./images/twitter.png" alt="Twitter"
                             class="social-icon"> </a>
-                    <a href="https://www.youtube.com/"> <img src="./images/youtube.png" alt="YouTube"
+                    <a href="https://www.youtube.com/" target="_blank"> <img src="./images/youtube.png" alt="YouTube"
                             class="social-icon"> </a>
                 </div>
             </div>
