ancient mind page completed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h2> Legends of the Land </h2>
                 </div>
                 <div>
-                    <img src="./images/anciend-minds.png" alt="ancient minds" class="card-0" height="230px" width="300px">
+                    <a href="./pages/ancientminds.html"> <img src="./images/anciend-minds.png" alt="ancient minds" class="card-0" height="230px" width="300px"> </a>
                     <h2> Ancient Minds </h2>
                 </div>
             </div>
