--- a/pages/ancientminds.html
+++ b/pages/ancientminds.html
@@ -38,7 +38,7 @@
     <!--main body-->
     <div class="card">
         <div>
-            <img src="./../images/spiritual souls/gautam-buddha.png" alt="gautam buddha" class="card-image" width="auto"
+            <img src="./../images/ancient minds/aryabhatta.png" alt="Aryabhatta" class="card-image" width="auto"
                 height="400px">
         </div>
         <div id="card">
@@ -67,14 +67,14 @@
             <br> <button class="button"> Read More </button>
         </div>
         <div>
-            <img src="./../images/spiritual souls/swami-vivekanand.png" alt="swami vivekananda" class="card-image"
+            <img src="./../images/ancient minds/sushruta.png" alt="sushruta" class="card-image"
                 width="auto" height="400px">
         </div>
     </div>
 
     <div class=" card">
         <div>
-            <img src="./../images/spiritual souls/guru-nanak.png" alt="guru nanak" class="card-image" width="auto"
+            <img src="./../images/ancient minds/charaka.png"  alt="charaka" class="card-image" width="auto"
                 height="400px">
         </div>
         <div id="card">
@@ -104,28 +104,28 @@
             <br> <button class="button"> Read More </button>
         </div>
         <div>
-            <img src="./../images/spiritual souls/sri-ramana-maharshi.png" alt="sri ramana maharshi" class="card-image"
+            <img src="./../images/ancient minds/ramanujan.png" alt="sri ramana maharshi" class="card-image"
                 width="auto" height="400px">
         </div>
+    </div>
 
         <div class="card">
+            <div>
+                <img src="./../images/ancient minds/panini.png" alt="sri ramana maharshi"
+                    class="card-image" width="auto" height="400px">
+            </div>
             <div id="card">
                 <h1> Panini </h1>
                 Panini, who lived around 500 BCE, was a pioneering linguist and grammarian known for his remarkable work
                 Ashtadhyayi. This text consists of nearly 4,000 rules that systematically describe the structure and
-                grammar
-                of Sanskrit. Panini's approach was highly logical and algorithmic, making Ashtadhyayi the world's first
-                formal system of language. His grammar is so precise that it’s considered a precursor to modern
+                grammar of Sanskrit. Panini's approach was highly logical and algorithmic, making Ashtadhyayi the world's first
+                formal system of language. His grammar is so precise that it's considered a precursor to modern
                 computational linguistics and programming languages. Panini introduced the concept of meta-rules,
                 transformations, and recursions, long before such ideas were formalized in mathematics or computer
-                science.
-                His genius laid the foundation of modern linguistic theory.
+                science. His genius laid the foundation of modern linguistic theory.
                 <br> <button class="button"> Read More </button>
             </div>
-            <div>
-                <img src="./../images/spiritual souls/sri-ramana-maharshi.png" alt="sri ramana maharshi"
-                    class="card-image" width="auto" height="400px">
-            </div>
+            
         </div>
 
         <!--main body ends -->
